[package]
name = "xelis-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.3", features = ["hazmat"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
thiserror = "1.0.58"
blake3 = "1.5.1"
chacha20 = "0.9.1"
crc = "3.0"

[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 3
overflow-checks = false

[[bin]]
name = "xelis_hash_comparison_v2"
path = "xelis-hash-v2.rs"